[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Lato/Lato-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menu/FriendData.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/searchForFriends/searchForFriends.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 1 )

[node name="SearchFriend" type="Node2D"]
script = ExtResource( 3 )

[node name="FriendName" type="TextEdit" parent="."]
margin_left = 8.0
margin_top = 56.0
margin_right = 296.0
margin_bottom = 104.0
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
caret_blink = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 48.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Enter Friend Name"

[node name="Button" type="Button" parent="."]
margin_left = 312.0
margin_top = 64.0
margin_right = 408.0
margin_bottom = 96.0
text = "Search"

[node name="FriendData" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 8.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 176.0
rect_scale = Vector2( 1.23583, 1.29485 )

[node name="SendFriendReuest" type="Button" parent="."]
visible = false
margin_left = 104.0
margin_top = 224.0
margin_right = 272.0
margin_bottom = 256.0
text = "Send Friend Request"

[node name="GetUserByName" type="HTTPRequest" parent="."]

[node name="SendFriendRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="SendFriendReuest" to="." method="_on_SendFriendReuest_pressed"]
[connection signal="request_completed" from="GetUserByName" to="." method="_on_GetUserByName_request_completed"]
[connection signal="request_completed" from="SendFriendRequest" to="." method="_on_SendFriendRequest_request_completed"]
